dataset1235/2025-2/805158916/users/2847101731/executions/71079933_359632665.log
== RUN (2025-08-11 15:28:36)
-- CODE: 
(print)(round(250/6))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
41.67
---- user output:
42
-- TEST CASE 2:
---- input:
xx
---- correct output:
41.67
---- user output:
42
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-11 15:24:33)
-- CODE: 
round(print)(250/6)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
41.67
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    round(print)(250/6)
    ^^^^^^^^^^^^
TypeError: type builtin_function_or_method doesn't define __round__ method
-- TEST CASE 2:
---- input:
xx
---- correct output:
41.67
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    round(print)(250/6)
    ^^^^^^^^^^^^
TypeError: type builtin_function_or_method doesn't define __round__ method
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-11 15:28:56)
-- CODE: 
((print(round(250/6))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
41.67
-- ERROR:
File "XXXX", line 1
    ((print(round(250/6))
     ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
xx
---- correct output:
41.67
-- ERROR:
File "XXXX", line 1
    ((print(round(250/6))
     ^
SyntaxError: '(' was never closed
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-11 15:26:19)
-- CODE: 
print(round) (250/6)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
41.67
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    print(round) (250/6)
TypeError: 'NoneType' object is not callable
-- TEST CASE 2:
---- input:
xx
---- correct output:
41.67
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    print(round) (250/6)
TypeError: 'NoneType' object is not callable
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-11 15:27:35)
-- CODE: 
(print(round(250/6))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
41.67
-- ERROR:
File "XXXX", line 1
    (print(round(250/6))
    ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
xx
---- correct output:
41.67
-- ERROR:
File "XXXX", line 1
    (print(round(250/6))
    ^
SyntaxError: '(' was never closed
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-11 15:29:39)
-- CODE: 
(print)(round(250/6,2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
xx
---- correct output:
41.67
---- user output:
41.67
-- TEST CASE 2:
---- input:
xx
---- correct output:
41.67
---- user output:
41.67
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-11 15:27:22)
-- CODE: 
(print(round(250/6))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
41.67
-- ERROR:
File "XXXX", line 1
    (print(round(250/6))
    ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
xx
---- correct output:
41.67
-- ERROR:
File "XXXX", line 1
    (print(round(250/6))
    ^
SyntaxError: '(' was never closed
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-11 15:29:18)
-- CODE: 
(print)(round(250/6))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
41.67
---- user output:
42
-- TEST CASE 2:
---- input:
xx
---- correct output:
41.67
---- user output:
42
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-11 15:28:24)
-- CODE: 
(print)(round(250/6))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
41.67
---- user output:
42
-- TEST CASE 2:
---- input:
xx
---- correct output:
41.67
---- user output:
42
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-11 15:27:54)
-- CODE: 
(print(round(250/6))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
41.67
-- ERROR:
File "XXXX", line 1
    (print(round(250/6))
    ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
xx
---- correct output:
41.67
-- ERROR:
File "XXXX", line 1
    (print(round(250/6))
    ^
SyntaxError: '(' was never closed
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-11 15:29:36)
-- CODE: 
(print)(round(250/6,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
41.67
---- user output:
41.67
-- TEST CASE 2:
---- input:
xx
---- correct output:
41.67
---- user output:
41.67
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-11 15:28:38)
-- CODE: 
(print)(round(250/6))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
41.67
---- user output:
42
-- TEST CASE 2:
---- input:
xx
---- correct output:
41.67
---- user output:
42
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-11 15:27:14)
-- CODE: 
print(round(250/6))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
xx
---- correct output:
41.67
---- user output:
42
-- TEST CASE 2:
---- input:
xx
---- correct output:
41.67
---- user output:
42
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-11 15:27:36)
-- CODE: 
(print(round(250/6))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
41.67
-- ERROR:
File "XXXX", line 1
    (print(round(250/6))
    ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
xx
---- correct output:
41.67
-- ERROR:
File "XXXX", line 1
    (print(round(250/6))
    ^
SyntaxError: '(' was never closed
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-11 15:28:07)
-- CODE: 
(print)(round(250/6))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
41.67
---- user output:
42
-- TEST CASE 2:
---- input:
xx
---- correct output:
41.67
---- user output:
42
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-11 15:27:52)
-- CODE: 
(print(round(250/6))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
41.67
-- ERROR:
File "XXXX", line 1
    (print(round(250/6))
    ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
xx
---- correct output:
41.67
-- ERROR:
File "XXXX", line 1
    (print(round(250/6))
    ^
SyntaxError: '(' was never closed
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-11 15:27:12)
-- CODE: 
print(round(250/6))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
xx
---- correct output:
41.67
---- user output:
42
-- TEST CASE 2:
---- input:
xx
---- correct output:
41.67
---- user output:
42
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
